styles.css
/* ... */
/*  Footer first div child  -----------------1st*/
.footer-first-child > div {
  display: flex;
  flex-direction: column;
}

.footer-p-hidden {
  margin-bottom: 10px;
}

.footer-banner-img {
  width: 100%;
  height: auto;
}

.banner-container {
  position: relative;
}

.banner-container > div {
  display: flex;
  gap: clamp(0.3rem, 2vw, 1.5rem);
  position: absolute;
  bottom: 28%;
  right: 6%;
  color: var(--white-color);
}

.banner-container > div > a {
  font-size: clamp(0.7rem, 2vw, 0.8rem);
  text-decoration: underline;
}

/*  Footer second div child  ---------------2nd*/
.footer-second-div {
  margin-top: 2rem;
}
.footer-second-div hr {
  margin: 1rem 0;
}
.footer-section > h2 {
  display: none;
}

/*  Footer third div child  ---------------3rd*/

.footer-third-div {
  display: flex;
  flex-direction: column;
  padding: 1rem auto;
  gap: 1rem;
}

.footer-social-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  overflow-x: hidden;
  padding: 16px 16px 0;
  max-width: 40rem;
}
.footer-social-icons a:hover {
  transform: scale(1.1);
}

.footer-social-icons a:hover path {
  fill: var(--secondary-color);
}

.footer-social-icons a svg {
  width: 100%;
  height: auto;
}

.footer-contacts {
  display: flex;
  flex-direction: column;
  color: var(--white-color);
  gap: 0.5rem;
}

.footer-contacts h3 {
  font-size: 1rem;
  font-weight: 500;
}
.footer-contacts ul {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.footer-contacts ul > li {
  display: flex;
  gap: 0.8rem;
}

.footer-payment-icons {
  margin: 10px auto 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  justify-content: center;
}

.footer-payment-icons li {
  display: flex;
  justify-content: center;
  align-items: center;
}
.footer-payment-icons img:hover {
  transform: scale(1.15);
}

/* Dropdown footer-second-div mobile view */
.dropdown-checkbox {
  display: none; /* Hide the checkbox, this is for the dropdown of footer 2nd div*/
}

.dropdown-toggle,
.footer-section-link {
  display: block;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  transition: ease-in-out 1s;
  font-weight: 500;
}

.in-store-link {
  display: flex;
  justify-content: space-between;
}

/* Dropdown Content */
.dropdown-content {
  list-style: none;
  margin: 0;
  padding: 0;
  max-height: 0;
  overflow: hidden;
  transition: var(--dropdown-transition);
}

.dropdown-content li {
  padding: 10px;
}

.dropdown-content li a {
  text-decoration: none;
  display: block;
  transition: color 0.3s;
}

/* Toggle Dropdown on Checkbox Check */
.dropdown-checkbox:checked ~ .dropdown-content {
  max-height: 20rem;
}

.dropdown-checkbox:checked ~ .dropdown-toggle img {
  rotate: 180deg;
}

.footer-contacts-show {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.footer-contacts-toggle,
.footer-label-see-more {
  border: 1px solid var(--white-color);
  width: fit-content;
  padding: 0.1rem 1rem;
  border-radius: 2rem;
}

.banner-cta p,
.footer-p-desktop,
.footer-contacts > p,
footer div:first-child > h1,
footer div:first-child > form,
.h2-hidden,
.payment-methods-h2,
.footer-banner-img-confetti,
.footer-banner-img-cover,
#footer-contacts-see-more,
.footer-third-last-child div hr,
.f-contacts-hide,
.footer-contacts input,
.footer-contacts label,
.in-store-link {
  display: none;
}

/* See more button in footer mobile view */
#footer-contacts-see-more:checked ~ .f-contacts-hide {
  display: flex;
}

#footer-contacts-see-more:checked + .footer-contacts-toggle::after {
  content: "See less";
}
#footer-contacts-see-more:not(:checked) + .footer-contacts-toggle::after {
  content: "See More";
}
#footer-contacts-see-more:checked + .footer-contacts-toggle {
  order: 3;
}

.footer-third-last-child {
  display: flex;
  flex-direction: column;
  gap: 1.3rem;
}

.footer-third-last-child > div {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

@media screen and (width > 600px) {
  .footer-bottom-ul {
    flex-direction: row !important;
    gap: 1rem;
  }

  /* Show the hidden contact div  xbenz*/
  .footer-third-last-child {
    flex-direction: row;
    text-wrap: nowrap;
    gap: clamp(3rem, 8vw, 15rem);
  }

  /* Remove see more button  xbenz */
  .footer-contacts-toggle {
    display: none;
  }

  #footer-contacts-see-more:not(:checked) ~ .f-contacts-hide {
    display: flex;
  }
}
/* ... */

